# SciAgents

./: README.md  pyproject.toml
.github/workflows/: publish.yml
config/: config.yml  config_template.yml
sciagents/agents/: agent.py  chat_agent.py  message.py
sciagents/tools/: __init__.py  base_tool.py  function_tool.py  tools.py
sciagents/tools/mcp_tool/: __init__.py  client.py  server.py  toolkit.py
src/: llm.py
src/agents/: agent.py  chat_agent.py  message.py
test/: test_chat_agent.ipynb  test_chat_agent.py  test_chat_agent_tool.ipynb
